modified some data

--- a/index.html
+++ b/index.html
@@ -43,11 +43,13 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello , my name is <span class="name">Nilendra Patel</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing"></span></h3>
-                            <p>I'm a Front-End Web Developer with 4 months training experience. My expertise is to create and desing a website with responsive.</p>
-                            <a href="#" class="btn">Download CV</a>
+                            <p>I'm a Front-End Web Developer with 4 months training experience. <br>My expertise is to create and desing a website with responsive. <br>Now I have also started learning UI/UX designing by
+                                using Figma and Adobe XD software.
+                                </p>
+                            <a href="./documents/myresume.pdf" target="_blank" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="images/hero.jpg" alt="">
+                            <img src="images/hero-removebg.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -147,10 +149,10 @@
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2017 -2018
+                                                        <i class="fa fa-calendar"></i> 2020-2024
                                                     </h3>
-                                                    <h4 class="timeline-title">Class 10th</h4>
-                                                    <p class="timeline-text">Percentage : 75.5%</p>
+                                                    <h4 class="timeline-title">B-Tech in Computer Science (Pursuring)</h4>
+                                                    <p class="timeline-text">Aggrigate CGPA : 9.0</p>
                                                 </div>
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
@@ -163,10 +165,10 @@
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2020-2024
+                                                        <i class="fa fa-calendar"></i> 2017 -2018
                                                     </h3>
-                                                    <h4 class="timeline-title">B-Tech in Computer Science (Pursuring)</h4>
-                                                    <p class="timeline-text">Aggrigate CGPA : 9.0</p>
+                                                    <h4 class="timeline-title">Class 10th</h4>
+                                                    <p class="timeline-text">Percentage : 75.5%</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -186,7 +188,6 @@
                                                     <p class="timeline-text">
                                                         <ul>Programming Language
                                                             <ul>C++</ul>
-                                                            <ul>C</ul>
                                                             <ul>Python</ul>
                                                         </ul>
                                                         <hr><br>
@@ -213,7 +214,7 @@
                                                     <h3 class="timeline-date">
                                                         <i class="fa fa-calendar"></i> 2022 - current
                                                     </h3>
-                                                    <h4 class="timeline-title">Full Stack Web Development</h4>
+                                                    <h4 class="timeline-title">Front-End Web Development</h4>
                                                     <p class="timeline-text">
                                                         <ul>HTML</ul>
                                                         <ul>CSS</ul>
@@ -311,49 +312,14 @@
                             <h2>My Latest Projects :</h2>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="project-item padd-15">
+                    <div class="row clutter">
+                        <!-- <div class="project-item padd-15">
                             <div class="project-item-inner shodow-dark">
                                 <div class="project-img">
                                     <a href="#"><img src="./images/project/project1.jpg" alt=""></a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="project-item padd-15">
-                            <div class="project-item-inner shodow-dark">
-                                <div class="project-img">
-                                    <a href="#"><img src="./images/project/project2.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-item padd-15">
-                            <div class="project-item-inner shodow-dark">
-                                <div class="project-img">
-                                    <a href="#"><img src="./images/project/project3.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-item padd-15">
-                            <div class="project-item-inner shodow-dark">
-                                <div class="project-img">
-                                    <a href="#"><img src="./images/project/project4.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-item padd-15">
-                            <div class="project-item-inner shodow-dark">
-                                <div class="project-img">
-                                    <a href="#"><img src="./images/project/project5.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="project-item padd-15">
-                            <div class="project-item-inner shodow-dark">
-                                <div class="project-img">
-                                    <a href="#"><img src="./images/project/project6.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
