--- a/index.html
+++ b/index.html
@@ -42,14 +42,12 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello , my name is <span class="name">Nilendra Patel</span></h3>
-                            <h3 class="my-profession">I'm a <span class="typing"></span></h3>
-                            <p>I'm a Front-End Web Developer with 4 months training experience. <br>My expertise is to create and desing a website with responsive. <br>Now I have also started learning UI/UX designing by
-                                using Figma and Adobe XD software.
-                                </p>
+                            <h3 class="my-profession"><span class="typing"></span></h3>
+                            <p>Hello & Welcome to my portfolio website,<br>I'm <b>Full-time learner</b> and always very <b>Enthusiastic</b> to learn new skills.</p>
                             <a href="./documents/myresume.pdf" target="_blank" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="images/hero-removebg.png" alt="">
+                            <img src="images/o.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -67,8 +65,8 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I'm <span>Hard-Working student</span> and <span>Front-End Web Developer</span></h3>
-                                    <p>Hello & Welcome to my portfolio website, I'm Full-time learner as well as Quick learner, and always very enthusiastic to learn new skills. <br> I had completed my schooling and currently pursuring <b>B-Tech</b> degree in <b>Computer Science</b> from <b>Sagar Institute Of Research and Technology , Bhopal college , Madhya Pradesh</b>. <br> Now I had started to learn a new skill which is <b>Full-Stack Web Development</b> from yhe famous Institute in bhopal know as <b>Sheryians Coding School</b> </p>
+                                    <h3>I'm <span>Front-End Web Developer</span></h3>
+                                    <p>With 4 months training experience. <br>My expertise is to create and desing a website with responsive. <br>Now I have also started learning UI/UX designing by using Figma and Adobe XD software.</p>
                                 </div>
                             </div>
                             <div class="row">
