--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>project 1</title>
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
@@ -332,27 +333,35 @@
                     </div>
                     <h3 class="contact-title padd-15">Have You Any Questions ?</h3>
                     <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
-                    <div class="row">
-                        <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-phone"></i></div>
-                            <h4>Call Us On</h4>
-                            <p>+91 9406663416</p>
-                        </div>
-                        <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-map-marker-alt"></i></div>
-                            <h4>Office</h4>
-                            <p>India</p>
-                        </div>
-                        <div class="contact-info-item padd-15">
+                    <div class="row social">
+                        <a target="_blank" href="#">
+                            <div class="contact-info-item padd-15">
+                                <div class="icon"><i class="fa fa-phone"></i></div>
+                                <h4>Call Us On</h4>
+                                <p>+91 9406663416</p>
+                            </div>
+                        </a>
+                        <a target="_blank" href="#">
+                            <div class="contact-info-item padd-15">
                             <div class="icon"><i class="fa fa-envelope"></i></div>
                             <h4>Email</h4>
-                            <p>rocky123@gmail.com</p>
-                        </div>
-                        <div class="contact-info-item padd-15">
-                            <div class="icon"><i class="fa fa-globe-europe"></i></div>
-                            <h4>Website</h4>
-                            <p>www.rocky.com</p>
-                        </div>
+                            <p>patelnilendra809@gmail.com</p>
+                            </div>
+                        </a>
+                        <a target="_blank" href="https://www.instagram.com/nilendra.vip/">
+                            <div class="contact-info-item padd-15">
+                                <div class="icon"><i class="ri-instagram-fill"></i></div>
+                                <h4>Instagram</h4>
+                                <p>nilendra.vip</p>
+                            </div>
+                        </a>
+                        <a target="_blank" href="https://www.linkedin.com/in/%E2%84%95i%CD%A5%E2%84%93e%CD%A3n%CD%AB%E2%88%82%E2%84%9D%E2%B1%A5-%E2%84%99%E2%B1%A5te%E2%84%93-%F0%9F%A6%81-6aaa71209/">
+                            <div class="contact-info-item padd-15">
+                                <div class="icon"><i class="ri-linkedin-box-fill"></i></div>
+                                <h4>LinkedIn</h4>
+                                <p>Nilendra Patel</p>
+                            </div>
+                        </a>
                     </div>
                     <h3 class="contact-title padd-15">SEND ME AN EMAIL</h3>
                     <h4 class="contact-sub-title padd-15">I'M VERY RESPONSIVE TO MESSAGES</h4>
