--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>project 1</title>
+    <title>Portfolio 2022 || Nilendra Patel</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.2.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -48,7 +48,7 @@
                             <a href="./documents/myresume.pdf" target="_blank" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="images/o.png" alt="">
+                            <img src="images/Nilendra Patel Photo2.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -312,13 +312,7 @@
                         </div>
                     </div>
                     <div class="row clutter">
-                        <!-- <div class="project-item padd-15">
-                            <div class="project-item-inner shodow-dark">
-                                <div class="project-img">
-                                    <a href="#"><img src="./images/project/project1.jpg" alt=""></a>
-                                </div>
-                            </div>
-                        </div> -->
+                        <!-- Card are creted by using JS clutter -->
                     </div>
                 </div>
             </div>
