--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello , my name is <span class="name">Nilendra Patel</span></h3>
                             <h3 class="my-profession"><span class="typing"></span></h3>
-                            <p>Hello & Welcome to my portfolio website,<br>I'm <b>Full-time learner</b> and always very <b>Enthusiastic</b> to learn new skills.</p>
+                            <p>Welcome to my portfolio website,<br>I'm <b>Full-time learner</b> and always very <b>Enthusiastic</b> to learn new skills.</p>
                             <a href="./documents/myresume.pdf" target="_blank" class="btn">Download CV</a>
                         </div>
                         <div class="home-img padd-15">
-                            <img src="images/Nilendra Patel Photo2.png" alt="">
+                            <img src="images/Nilendra Patel Photo.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -398,7 +398,7 @@
                     </div>
                 </div>
             </div>
-            <!-- COntact Section End -->
+            <!-- Contact Section End -->
         </div>
     </div>
 
