--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello , my name is <span class="name">Nilendra Patel</span></h3>
-                            <h3 class="my-profession"><span class="typing"></span></h3>
-                            <p>Welcome to my portfolio website,<br>I'm <b>Full-time learner</b> and always very <b>Enthusiastic</b> to learn new skills.</p>
-                            <a href="./documents/myresume.pdf" target="_blank" class="btn">Download CV</a>
+                            <h3 class="my-profession">I'm &nbsp;<span class="typing"></span></h3>
+                            <p>Welcome to my personal portfolio website 😊</p>
+                            <a href="./documents/Nilendra Patel Resume.pdf" target="_blank" class="btn">View My Resume</a>
                         </div>
                         <div class="home-img padd-15">
                             <img src="images/Nilendra Patel Photo.png" alt="">
@@ -67,11 +67,12 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm <span>Front-End Web Developer</span></h3>
-                                    <p>With 4 months training experience. <br>My expertise is to create and desing a website with responsive. <br>Now I have also started learning UI/UX designing by using Figma and Adobe XD software.</p>
+                                    <p >With a solidfoundation in frontend part including HTML,CSS, JS, and little more about Bootstrap 5.I’m dedicated, hardworking, and committed toproducing expected results.</p>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="personal-info padd-15">
+                                    <h3 class="title">Basic Info</h3>
                                     <div class="row">
                                         <div class="info-item padd-15">
                                             <p>Birthday : <span>26 Jan 2003</span></p>
@@ -86,14 +87,10 @@
                                             <p>Nickname : <span>Rocky</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Degree : <span>B-Tech</span></p>
-                                        </div>
-                                        <div class="info-item padd-15">
                                             <p>Religion : <span>Hindu</span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>City : <span>India</span></p>
-                                            <br>
+                                            <p>City : <span>Bhopal, MP, India</span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Language : <span>Hindi & English</span></p>
@@ -107,34 +104,18 @@
                                     </div>
                                 </div>
                                 <div class="skills padd-15">
-                                    <div class="row">
+                                    <h3 class="title">Skills</h3>
+                                    <div style="display: flex; align-items: flex-start;justify-content: start;">
                                         <div class="skill-item padd-15">
                                             <h5>HTML</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width:86%"></div>
-                                                <div class="skill-percent">86%</div>
-                                            </div>
-                                        </div>
-                                        <div class="skill-item padd-15">
                                             <h5>CSS</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width:78%"></div>
-                                                <div class="skill-percent">78%</div>
-                                            </div>
-                                        </div>
-                                        <div class="skill-item padd-15">
-                                            <h5>JS</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width:50%"></div>
-                                                <div class="skill-percent">50%</div>
-                                            </div>
+                                            <h5>JavaScript</h5>
+                                            <h5>React JS</h5>
+                                            <h5>Next JS</h5>
                                         </div>
                                         <div class="skill-item padd-15">
                                             <h5>GSAP</h5>
-                                            <div class="progress">
-                                                <div class="progress-in" style="width:60%"></div>
-                                                <div class="skill-percent">60%</div>
-                                            </div>
+                                            <h5>Bootstrap</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -148,10 +129,11 @@
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2020-2024
+                                                        <i class="fa fa-calendar"></i> 2020-Present
                                                     </h3>
                                                     <h4 class="timeline-title">B-Tech in Computer Science (Pursuring)</h4>
-                                                    <p class="timeline-text">Aggrigate CGPA : 9.0</p>
+                                                    <small>From : SIRT college, Bhopal</small>
+                                                    <!-- <p class="timeline-text">Aggrigate CGPA : 9.0</p> -->
                                                 </div>
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
@@ -159,7 +141,8 @@
                                                         <i class="fa fa-calendar"></i> 2019-2020
                                                     </h3>
                                                     <h4 class="timeline-title">Class 12th</h4>
-                                                    <p class="timeline-text">Percentage : 68.8%</p>
+                                                    <small>From : Kendriya Vidyalaya, Narmada Nagar, Khandwa</small>
+                                                    <!-- <p class="timeline-text">Percentage : 68.8%</p> -->
                                                 </div>
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
@@ -167,7 +150,8 @@
                                                         <i class="fa fa-calendar"></i> 2017 -2018
                                                     </h3>
                                                     <h4 class="timeline-title">Class 10th</h4>
-                                                    <p class="timeline-text">Percentage : 75.5%</p>
+                                                    <small>From : Kendriya Vidyalaya, Narmada Nagar, Khandwa</small>
+                                                    <!-- <p class="timeline-text">Percentage : 75.5%</p> -->
                                                 </div>
                                             </div>
                                         </div>
