About Page Updated

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                             <h3 class="hello">Hello , my name is <span class="name">Nilendra Patel</span></h3>
                             <h3 class="my-profession">I'm &nbsp;<span class="typing"></span></h3>
                             <p>Welcome to my personal portfolio website 😊</p>
+                            <p>This website containes all the information about me , and about my journey in WEB DEVELOPMENT.</p>
                             <a href="./documents/Nilendra Patel Resume.pdf" target="_blank" class="btn">View My Resume</a>
                         </div>
                         <div class="home-img padd-15">
@@ -110,12 +111,12 @@
                                             <h5>HTML</h5>
                                             <h5>CSS</h5>
                                             <h5>JavaScript</h5>
-                                            <h5>React JS</h5>
-                                            <h5>Next JS</h5>
+                                            <h5>Bootstrap</h5>
+                                            <h5>GSAP</h5>
                                         </div>
                                         <div class="skill-item padd-15">
-                                            <h5>GSAP</h5>
-                                            <h5>Bootstrap</h5>
+                                            <h5>React JS</h5>
+                                            <h5>Next JS</h5>
                                         </div>
                                     </div>
                                 </div>
@@ -132,8 +133,7 @@
                                                         <i class="fa fa-calendar"></i> 2020-Present
                                                     </h3>
                                                     <h4 class="timeline-title">B-Tech in Computer Science (Pursuring)</h4>
-                                                    <small>From : SIRT college, Bhopal</small>
-                                                    <!-- <p class="timeline-text">Aggrigate CGPA : 9.0</p> -->
+                                                    <p><i class="fa fa-map-pin"></i>&nbsp; SIRT college, Bhopal</p>
                                                 </div>
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
@@ -141,8 +141,7 @@
                                                         <i class="fa fa-calendar"></i> 2019-2020
                                                     </h3>
                                                     <h4 class="timeline-title">Class 12th</h4>
-                                                    <small>From : Kendriya Vidyalaya, Narmada Nagar, Khandwa</small>
-                                                    <!-- <p class="timeline-text">Percentage : 68.8%</p> -->
+                                                    <p><i class="fa fa-map-pin"></i>&nbsp; Kendriya Vidyalaya, Narmada Nagar, Khandwa</p>
                                                 </div>
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
@@ -150,8 +149,7 @@
                                                         <i class="fa fa-calendar"></i> 2017 -2018
                                                     </h3>
                                                     <h4 class="timeline-title">Class 10th</h4>
-                                                    <small>From : Kendriya Vidyalaya, Narmada Nagar, Khandwa</small>
-                                                    <!-- <p class="timeline-text">Percentage : 75.5%</p> -->
+                                                    <p><i class="fa fa-map-pin"></i>&nbsp; Kendriya Vidyalaya, Narmada Nagar, Khandwa</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -165,45 +163,26 @@
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2020-2021
+                                                        <i class="fa fa-calendar"></i> 1st June 2023 -Present
                                                     </h3>
-                                                    <h4 class="timeline-title">Basic Knowledge of Computer</h4>
-                                                    <p class="timeline-text">
-                                                        <ul>Programming Language
-                                                            <ul>C++</ul>
-                                                            <ul>Python</ul>
-                                                        </ul>
-                                                        <hr><br>
-                                                        <ul>Fundatmental of Ethical Hacking</ul>
-                                                    </p>
+                                                    <h4 class="timeline-title">Frontend Web Development ( Internship )</h4>
+                                                    <p><i class="fa fa-map-pin"></i>&nbsp; Medorn Ventures Pvt Ltd , Bhopal</p>
                                                 </div>
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2021-2022
+                                                        <i class="fa fa-calendar"></i> 1st Nov 2022 - 28th Feb 2023
                                                     </h3>
-                                                    <h4 class="timeline-title">OS and DBMS</h4>
-                                                    <p class="timeline-text">
-                                                        <ul>LINUX OS</ul>
-                                                        <ul>Kali Linux OS</ul>
-                                                        <ul>Parrot Security OS</ul>
-                                                        <hr><br>
-                                                        <ul>DBMS with MySQL</ul>
-                                                        <ul>MySQL Connectevity</ul>
-                                                    </p>
+                                                    <h4 class="timeline-title">Bckend Web Development ( Training )</h4>
+                                                    <p><i class="fa fa-map-pin"></i>&nbsp; Sheryians Coding School, Bhopal</p>
                                                 </div>
                                                 <div class="timeline-item padd-15">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calendar"></i> 2022 - current
+                                                        <i class="fa fa-calendar"></i> 1st July 2022 - 30th Oct 2022
                                                     </h3>
-                                                    <h4 class="timeline-title">Front-End Web Development</h4>
-                                                    <p class="timeline-text">
-                                                        <ul>HTML</ul>
-                                                        <ul>CSS</ul>
-                                                        <ul>JavaScript</ul>
-                                                        <ul>GSAP for animation</ul>
-                                                    </p>
+                                                    <h4 class="timeline-title">Frontend Web Development ( Training )</h4>
+                                                    <p><i class="fa fa-map-pin"></i>&nbsp; Sheryians Coding School, Bhopal</p>
                                                 </div>
                                             </div>
                                         </div>
