Contact Page Updated

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <ul class="nav">
                 <li><a href="#home" class="active"><i class="fa fa-home"></i>Home</a></li>
                 <li><a href="#about"><i class="fa fa-user"></i>About</a></li>
-                <li><a href="#services"><i class="fa fa-list"></i>Services</a></li>
+                <!-- <li><a href="#services"><i class="fa fa-list"></i>Services</a></li> -->
                 <li><a href="#projects"><i class="fa fa-briefcase"></i>Projects</a></li>
                 <li><a href="#contact"><i class="fa fa-comments"></i>Contact</a></li>
             </ul>
@@ -195,7 +195,7 @@
             </section>
             <!-- About Section End -->
             <!-- Services Section Start -->
-            <div class="service section" id="services">
+            <!-- <div class="service section" id="services">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -259,7 +259,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Services Section End -->
             <!-- project Section Start -->
             <div class="project section" id="projects">
@@ -271,7 +271,7 @@
                     </div>
                     <div class="row">
                         <div class="project-heading">
-                            <h2>My Latest Projects :</h2>
+                            <h2>My Web Projects :</h2>
                         </div>
                     </div>
                     <div class="row clutter">
@@ -289,13 +289,13 @@
                         </div>
                     </div>
                     <h3 class="contact-title padd-15">Have You Any Questions ?</h3>
-                    <h4 class="contact-sub-title padd-15">I'M AT YOUR SERVICES</h4>
+                    <h4 class="contact-sub-title padd-15">Please free to ask me 😊</h4>
                     <div class="row social">
                         <a target="_blank" href="#">
                             <div class="contact-info-item padd-15">
                                 <div class="icon"><i class="fa fa-phone"></i></div>
                                 <h4>Call Us On</h4>
-                                <p>+91 9406663416</p>
+                                <p>+91 94066XXXXX</p>
                             </div>
                         </a>
                         <a target="_blank" href="#">
@@ -305,11 +305,12 @@
                             <p>patelnilendra809@gmail.com</p>
                             </div>
                         </a>
-                        <a target="_blank" href="https://www.instagram.com/nilendra.vip/">
+                        
+                        <a target="_blank" href="https://www.instagram.com/nilendra.web.developer/">
                             <div class="contact-info-item padd-15">
                                 <div class="icon"><i class="ri-instagram-fill"></i></div>
                                 <h4>Instagram</h4>
-                                <p>nilendra.vip</p>
+                                <p>nilendra.web.developer</p>
                             </div>
                         </a>
                         <a target="_blank" href="https://www.linkedin.com/in/%E2%84%95i%CD%A5%E2%84%93e%CD%A3n%CD%AB%E2%88%82%E2%84%9D%E2%B1%A5-%E2%84%99%E2%B1%A5te%E2%84%93-%F0%9F%A6%81-6aaa71209/">
@@ -353,7 +354,7 @@
                             <div class="row">
                                 <div class="form-item col-12 padd-15">
                                     <div class="form-group">
-                                        <button type="submit" class="btn">Send Message</button>
+                                        <a href="#contact"><button type="submit" class="btn">Send Message</button></a>
                                     </div>
                                 </div>  
                             </div>
