Project Page Updated

--- a/index.html
+++ b/index.html
@@ -277,6 +277,7 @@
                     <div class="row clutter">
                         <!-- Card are creted by using JS clutter -->
                     </div>
+                    <a href="https://github.com/nilendra-vip" target="_blank" class="viewMorePro"><button>View more projects on my github profile</button></a>
                 </div>
             </div>
             <!-- project Section End -->
