--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="row">
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello , my name is <span class="name">Nilendra Patel</span></h3>
-                            <h3 class="my-profession">I'm &nbsp;<span class="typing"></span></h3>
+                            <h3 class="my-profession">I'm &nbsp;<span class="homePageTyping"></span></h3>
                             <p>Welcome to my personal portfolio website 😊</p>
                             <p>This website containes all the information about me , and about my journey in WEB DEVELOPMENT.</p>
                             <a href="./documents/Nilendra Patel Resume.pdf" target="_blank" class="btn">View My Resume</a>
@@ -67,7 +67,7 @@
                         <div class="about-content padd-15">
                             <div class="row">
                                 <div class="about-text padd-15">
-                                    <h3>I'm <span>Front-End Web Developer</span></h3>
+                                    <h3 class="my-profession">I'm &nbsp;<span class="aboutPageTyping"></span></h3>
                                     <p >With a solidfoundation in frontend part including HTML,CSS, JS, and little more about Bootstrap 5.I’m dedicated, hardworking, and committed toproducing expected results.</p>
                                 </div>
                             </div>
