--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
-                            <h3 class="hello">Hello , my name is <span class="name">Nilendra Patel</span></h3>
+                            <h3 class="hello">Hello, I am &nbsp; <span class="name">Nilendra Patel</span></h3>
                             <h3 class="my-profession">I'm &nbsp;<span class="homePageTyping"></span></h3>
                             <p>Welcome to my personal portfolio website 😊</p>
                             <p>This website containes all the information about me , and about my journey in WEB DEVELOPMENT.</p>
