contact page update

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <h3 class="hello">Hello, I am &nbsp; <span class="name">Nilendra Patel</span></h3>
                             <h3 class="my-profession">I'm &nbsp;<span class="homePageTyping"></span></h3>
                             <p>Welcome to my personal portfolio website 😊</p>
-                            <p>This website containes all the information about me , and about my journey in WEB DEVELOPMENT.</p>
+                            <p>The purpose of this portfoli is to showcase my skills , projects and experience </p>
                             <a href="./documents/Nilendra Patel Resume.pdf" target="_blank" class="btn">View My Resume</a>
                         </div>
                         <div class="home-img padd-15">
@@ -309,7 +309,9 @@
                         
                         <a target="_blank" href="https://www.instagram.com/nilendra.web.developer/">
                             <div class="contact-info-item padd-15">
-                                <div class="icon"><i class="ri-instagram-fill"></i></div>
+                                <div class="icon">
+                                    <i class="ri-instagram-fill"></i>
+                                </div>
                                 <h4>Instagram</h4>
                                 <p>nilendra.web.developer</p>
                             </div>
